syntax = "proto3";

package hero;

service HeroService {
  rpc FindOne (GetHeroByIdReq) returns (GetHeroByIdRes);
  rpc FindAll (GetAllHeroReq) returns (GetAllHeroRes);
  rpc FindMany (stream GetHeroByIdReq) returns (stream GetHeroByIdRes);
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message GetHeroByIdReq {
  int32 id = 1;
}

message GetHeroByIdRes {
  string status = 1;
  repeated string error = 2;
  Hero data = 3;
}

message GetAllHeroReq {}

message GetAllHeroRes {
  string status = 1;
  repeated string error = 2;
  repeated Hero data = 3;
}
